[gd_scene load_steps=13 format=3 uid="uid://3lg6wrt3usr7"]

[ext_resource type="Script" path="res://scenes/clock.gd" id="1_8hk01"]
[ext_resource type="FontFile" uid="uid://cy57rny8n3ivi" path="res://fonts/Anonymous_Pro/AnonymousPro-Bold.ttf" id="1_etkaa"]
[ext_resource type="AudioStream" uid="uid://bu2eud5vm1ei4" path="res://sounds/bleep.mp3" id="3_m8s5n"]

[sub_resource type="LabelSettings" id="LabelSettings_eo577"]
font = ExtResource("1_etkaa")
font_size = 32
font_color = Color(0.0627451, 0.588235, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcy5j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtlf5"]
bg_color = Color(0.109804, 0.101961, 0.109804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.160784, 0.14902, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 7.0
expand_margin_top = 2.0
expand_margin_right = 7.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdrnu"]
bg_color = Color(0.160784, 0.14902, 0.160784, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.109804, 0.101961, 0.109804, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 7.0
expand_margin_top = 2.0
expand_margin_right = 7.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xacnk"]
bg_color = Color(0.0313726, 0.027451, 0.0313726, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.160784, 0.14902, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 7.0
expand_margin_top = 2.0
expand_margin_right = 7.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_qlom1"]
Button/colors/font_color = Color(0.0627451, 0.588235, 0.282353, 1)
Button/colors/font_focus_color = Color(0.0745098, 0.670588, 0.32549, 1)
Button/colors/font_hover_color = Color(0.0745098, 0.670588, 0.32549, 1)
Button/colors/font_pressed_color = Color(0.0509804, 0.513726, 0.243137, 1)
Button/font_sizes/font_size = 40
Button/fonts/font = ExtResource("1_etkaa")
Button/styles/focus = SubResource("StyleBoxFlat_jcy5j")
Button/styles/hover = SubResource("StyleBoxFlat_xtlf5")
Button/styles/normal = SubResource("StyleBoxFlat_cdrnu")
Button/styles/pressed = SubResource("StyleBoxFlat_xacnk")

[sub_resource type="LabelSettings" id="LabelSettings_h0fpf"]
font = ExtResource("1_etkaa")
font_size = 32
font_color = Color(0.0627451, 0.588235, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfup5"]
bg_color = Color(0.0313726, 0.027451, 0.0313726, 1)
expand_margin_left = 5.0

[sub_resource type="Theme" id="Theme_sycf4"]
Button/colors/font_color = Color(0.0627451, 0.588235, 0.282353, 1)
Button/colors/font_focus_color = Color(0.0745098, 0.670588, 0.32549, 1)
Button/colors/font_hover_color = Color(0.0745098, 0.670588, 0.32549, 1)
Button/colors/font_pressed_color = Color(0.0509804, 0.513726, 0.243137, 1)
Button/font_sizes/font_size = 40
Button/fonts/font = ExtResource("1_etkaa")
Button/styles/focus = SubResource("StyleBoxFlat_jcy5j")
Button/styles/hover = SubResource("StyleBoxFlat_xtlf5")
Button/styles/normal = SubResource("StyleBoxFlat_cdrnu")
Button/styles/pressed = SubResource("StyleBoxFlat_xacnk")
LineEdit/colors/font_color = Color(0.0627451, 0.588235, 0.282353, 1)
LineEdit/font_sizes/font_size = 28
LineEdit/fonts/font = ExtResource("1_etkaa")
LineEdit/styles/focus = SubResource("StyleBoxFlat_lfup5")
LineEdit/styles/normal = SubResource("StyleBoxFlat_lfup5")

[node name="Clock" type="Window"]
title = "DevAssistBar  -  Clock"
initial_position = 1
size = Vector2i(280, 300)
unresizable = true
script = ExtResource("1_8hk01")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0313726, 0.027451, 0.0313726, 1)

[node name="Time" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = 15.0
offset_right = 68.0
offset_bottom = 48.0
grow_horizontal = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_eo577")

[node name="Create" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -50.0
offset_right = 105.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_qlom1")
theme_override_font_sizes/font_size = 32
text = "Create timer"

[node name="TimeUntil" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -34.5
offset_right = 68.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "Timer at 
00:00:00"
label_settings = SubResource("LabelSettings_h0fpf")
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -24.0
offset_right = 85.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_sycf4")
max_value = 120.0
suffix = "Minutes"

[node name="Timer" type="Timer" parent="."]

[node name="AlarmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_m8s5n")
volume_db = 5.0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AlarmSound" to="." method="_on_audio_stream_player_finished"]
